fix menu anchor jumping w/ fixed nav bar

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -13,32 +13,12 @@ body {
     margin: 60px 0;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-    margin: 80px 0;
-    text-align: center;
+#jumbotron {
+    background: url(../img/phil.jpg) -100px -75px no-repeat;
+    min-height: 300px;
+    border: 1px #E9F2F9 solid;
+    padding-left: 450px;
 }
-.jumbotron h1 {
-    font-size: 100px;
-    line-height: 1;
-}
-.jumbotron .lead {
-    font-size: 24px;
-    line-height: 1.25;
-}
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-    margin: 60px 0;
-}
-.marketing p + h4 {
-    margin-top: 28px;
-}
-
 
 /* Customize the navbar links to be fill the entire space of the .navbar */
 .navbar .navbar-inner {
@@ -108,6 +88,6 @@ hr {
 
 #skills ul.inline li {
     line-height: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
 }
